Changed UI, auth.py and order-service